force-app/main/default/objects/Incoming_Message__e/Incoming_Message__e.object-meta.xml
<CustomObject>
    <label>Incoming Message</label>
    <pluralLabel>Incoming Message</pluralLabel>
</CustomObject>