force-app/main/default/objects/Incoming_Message__e/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <length>10</length>
    <type>Text</type>
</CustomField>