force-app/main/default/objects/Incoming_Message__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <length>240</length>
    <type>Text</type>
</CustomField>