force-app/main/default/objects/Incoming_Message__e/fields/From_Number__c.field-meta.xml
<CustomField>
    <fullName>From_Number__c</fullName>
    <label>From Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>