force-app/main/default/objects/Incoming_Message__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record Id</label>
    <length>254</length>
    <type>Text</type>
</CustomField>