force-app/main/default/objects/Incoming_Message__e/fields/Sent_date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Sent_date_and_Time__c</fullName>
    <label>Sent date and Time</label>
    <type>DateTime</type>
</CustomField>